# pkg/app/controller.go
@@ -1,4 +1,4 @@
-package store
+package app
 
 import (
 	jwt "github.com/appleboy/gin-jwt/v2"
@@ -8,7 +8,8 @@ import (
 	"strconv"
 )
 
-type App struct {
+// Controller is the controller for the app
+type Controller struct {
 	DB *gorm.DB
 }
 
@@ -25,10 +26,14 @@ type App struct {
 //	@Produce		json
 //	@Param			user_email	query		string	false	"search by email address"	Format(email)
 //	@Success		200			{string}	model.Item
+//	@Failure		400			{string}	error
 //	@Router			/users [get]
-func (a *App) GetUsers(c *gin.Context) {
+func (a *Controller) GetUsers(c *gin.Context) {
 	var users []User
-	a.DB.Find(&users).Where("email = ?", c.Query("user_email"))
+	if err := a.DB.Find(&users).Where("email = ?", c.Query("user_email")).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
+		return
+	}
 	c.JSON(http.StatusOK, gin.H{"data": users})
 }
 
@@ -43,14 +48,18 @@ func (a *App) GetUsers(c *gin.Context) {
 //	@Produce		json
 //	@Param			user_email	query		string	false	"search by email address"	Format(email)
 //	@Success		200			{string}	model.Item
+//	@Failure		400			{string}	error
 //	@Router			/items [get]
-func (a *App) GetItems(c *gin.Context) {
+func (a *Controller) GetItems(c *gin.Context) {
 	user := &User{}
 
 	claims := jwt.ExtractClaims(c)
 
 	userEmail := c.DefaultQuery("user_email", claims[identityKey].(string))
-	a.DB.Preload("Items").Where("email = ?", userEmail).First(&user)
+	if err := a.DB.Preload("Items").Where("email = ?", userEmail).First(&user).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": user.Items})
 }
@@ -64,12 +73,17 @@ func (a *App) GetItems(c *gin.Context) {
 //	@Tags			item
 //	@Accept			json
 //	@Produce		json
+//	@Param			id	path		string	true	"User ID"
 //	@Success		200	{string}	model.Item
-//	@Router			/workspaces/:id/users/:id/items [get]
-func (a *App) GetUserItems(c *gin.Context) {
+//	@Failure		400	{string}	error
+//	@Router			/users/{id}/items [get]
+func (a *Controller) GetUserItems(c *gin.Context) {
 	user := &User{}
 
-	a.DB.Preload("Items").Where("id = ?", c.Param("user")).First(&user)
+	if err := a.DB.Preload("Items").Where("id = ?", c.Param("user")).First(&user).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": user.Items})
 }
@@ -83,14 +97,12 @@ func (a *App) GetUserItems(c *gin.Context) {
 //	@Tags			item
 //	@Accept			json
 //	@Produce		json
-//	@Param			user_email	query		string	false	"associate item with user"		Format(email)
-//	@Param			workspace	query		string	false	"associate item with workspace"	Format(email)
-//	@Param			name		query		string	false	"Item name"						Format(email)
-//	@Param			description	query		string	false	"Item description"				Format(email)
-//	@Param			url			query		string	false	"Item help URL"					Format(email)
+//	@Param			user_email	query		string			false	"associate item with user"	Format(email)
+//	@Param			data		body		createItemInput	false	"Item data"
 //	@Success		200			{string}	model.Item
+//	@Failure		400			{string}	error
 //	@Router			/items [post]
-func (a *App) CreateItem(c *gin.Context) {
+func (a *Controller) CreateItem(c *gin.Context) {
 
 	userEmail, found := c.GetQuery("user_email")
 	if !found {
@@ -119,7 +131,10 @@ func (a *App) CreateItem(c *gin.Context) {
 		UserID:      user.ID,
 	}
 
-	a.DB.Create(&item)
+	if err := a.DB.Create(&item).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": item})
 }
@@ -133,14 +148,12 @@ func (a *App) CreateItem(c *gin.Context) {
 //	@Tags			item
 //	@Accept			json
 //	@Produce		json
-//	@Param			user_email	query		string	false	"associate item with user"		Format(email)
-//	@Param			workspace	query		string	false	"associate item with workspace"	Format(email)
-//	@Param			name		query		string	false	"Item name"						Format(email)
-//	@Param			description	query		string	false	"Item description"				Format(email)
-//	@Param			url			query		string	false	"Item help URL"					Format(email)
-//	@Success		200			{string}	model.Item
-//	@Router			/workspaces/:id/users/:id/items [post]
-func (a *App) CreateUserItem(c *gin.Context) {
+//	@Param			data	body		createItemInput	false	"User data"
+//	@Param			user_id	path		string			true	"User ID"	Format(uuid)
+//	@Success		200		{string}	model.Item
+//	@Failure		400		{string}	error
+//	@Router			/users/{id}/items [post]
+func (a *Controller) CreateUserItem(c *gin.Context) {
 	workspace := c.Param("workspace")
 	user := c.Param("user")
 
@@ -172,7 +185,10 @@ func (a *App) CreateUserItem(c *gin.Context) {
 		WorkspaceID: uint(w64),
 	}
 
-	a.DB.Create(&item)
+	if err := a.DB.Create(&item).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": item})
 }
@@ -187,8 +203,9 @@ func (a *App) CreateUserItem(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{string}	model.Item
-//	@Router			/items/:id [get]
-func (a *App) GetItem(c *gin.Context) { // Get model if exist
+//	@Failure		400	{string}	error
+//	@Router			/items/{id} [get]
+func (a *Controller) GetItem(c *gin.Context) { // Get model if exist
 	var item Item
 
 	if err := a.DB.Where("id = ?", c.Param("item")).First(&item).Error; err != nil {
@@ -208,9 +225,11 @@ func (a *App) GetItem(c *gin.Context) { // Get model if exist
 //	@Tags			item
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{string}	model.Item
-//	@Router			/items/:id [patch]
-func (a *App) UpdateItem(c *gin.Context) {
+//	@Param			data	body		updateItemInput	false	"Item data"
+//	@Success		200		{string}	model.Item
+//	@Failure		400		{string}	error
+//	@Router			/items/{id} [patch]
+func (a *Controller) UpdateItem(c *gin.Context) {
 	// Get model if exist
 	var item Item
 	if err := a.DB.Where("id = ?", c.Param("item")).First(&item).Error; err != nil {
@@ -225,7 +244,10 @@ func (a *App) UpdateItem(c *gin.Context) {
 		return
 	}
 
-	a.DB.Model(&item).Updates(input)
+	if err := a.DB.Model(&item).Updates(input).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": item})
 }
@@ -239,22 +261,39 @@ func (a *App) UpdateItem(c *gin.Context) {
 //	@Tags			item
 //	@Accept			json
 //	@Produce		json
+//	@Param			id	path		string	true	"Item ID"
 //	@Success		200	{string}	model.Item
-//	@Router			/items/:id [delete]
-func (a *App) DeleteItem(c *gin.Context) {
-	// Get model if exist
+//	@Failure		400	{string}	error
+//	@Router			/items/{id} [delete]
+func (a *Controller) DeleteItem(c *gin.Context) {
 	var item Item
 	if err := a.DB.Where("id = ?", c.Param("item")).First(&item).Error; err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
 		return
 	}
 
-	a.DB.Delete(&item)
+	if err := a.DB.Delete(&item).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": true})
 }
 
-func (a *App) GetWorkspaceUsers(c *gin.Context) {
+// GetWorkspaceUsers GET /workspaces/:id/users
+// Get all users
+//
+//	@Summary		Get all users
+//	@Schemes		http https
+//	@Description	Get all users.
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"Workspace ID"
+//	@Success		200	{string}	model.User
+//	@Failure		400	{string}	error
+//	@Router			/workspaces/{id}/users [get]
+func (a *Controller) GetWorkspaceUsers(c *gin.Context) {
 	var users []User
 	a.DB.Find(&users)
 	c.JSON(http.StatusOK, gin.H{"data": users})
@@ -269,11 +308,11 @@ func (a *App) GetWorkspaceUsers(c *gin.Context) {
 //	@Tags			user
 //	@Accept			json
 //	@Produce		json
-//	@Param			user_email	query		string	false	"associate item with user"	Format(email)
-//	@Param			name		query		string	false	"Username"					Format(email)
-//	@Success		200			{string}	model.Item
+//	@Param			data	body		createUserInput	false	"User data"
+//	@Success		200		{string}	model.Item
+//	@Failure		400		{string}	error
 //	@Router			/users [post]
-func (a *App) CreateUser(c *gin.Context) {
+func (a *Controller) CreateUser(c *gin.Context) {
 	user := &User{}
 	workspace := &Workspace{Name: "default"}
 
@@ -284,13 +323,19 @@ func (a *App) CreateUser(c *gin.Context) {
 		return
 	}
 
-	user.Email = c.Query("user_email")
-	user.Name = c.Query("name")
+	user.Email = input.Email
+	user.Name = input.Name
 	user.Workspaces = append(user.Workspaces, workspace)
 
-	a.DB.Where("email = ?", user.Email).First(&user)
+	if err := a.DB.Where("email = ?", user.Email).First(&user).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
+		return
+	}
 
-	a.DB.Create(&user)
+	if err := a.DB.Create(&user).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": user})
 }
@@ -304,9 +349,11 @@ func (a *App) CreateUser(c *gin.Context) {
 //	@Tags			user
 //	@Accept			json
 //	@Produce		json
+//	@Param			id	path		string	true	"User ID"
 //	@Success		200	{string}	model.Item
-//	@Router			/users/:id [get]
-func (a *App) GetUser(c *gin.Context) {
+//	@Failure		400	{string}	error
+//	@Router			/users/{id} [get]
+func (a *Controller) GetUser(c *gin.Context) {
 	var user User
 	if err := a.DB.Where("id = ?", c.Param("user")).First(&user).Error; err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
@@ -326,10 +373,15 @@ func (a *App) GetUser(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{string}	model.Item
+//	@Failure		400	{string}	error
 //	@Router			/workspaces [get]
-func (a *App) GetWorkspaces(c *gin.Context) {
+func (a *Controller) GetWorkspaces(c *gin.Context) {
 	var workspaces []Workspace
-	a.DB.Find(&workspaces)
+	err := a.DB.Find(&workspaces).Error
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 	c.JSON(http.StatusOK, gin.H{"data": workspaces})
 }
 
@@ -342,9 +394,11 @@ func (a *App) GetWorkspaces(c *gin.Context) {
 //	@Tags			workspace
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{string}	model.Item
+//	@Param			data	body		createWorkspaceInput	false	"Workspace data"
+//	@Success		200		{string}	model.Item
+//	@Failure		400		{string}	error
 //	@Router			/workspaces [post]
-func (a *App) CreateWorkspace(c *gin.Context) {
+func (a *Controller) CreateWorkspace(c *gin.Context) {
 	workspace := &Workspace{}
 
 	// Validate input
@@ -354,7 +408,10 @@ func (a *App) CreateWorkspace(c *gin.Context) {
 		return
 	}
 
-	a.DB.Create(&workspace)
+	if err := a.DB.Create(&workspace).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
 	c.JSON(http.StatusOK, gin.H{"data": workspace})
 }
@@ -368,9 +425,11 @@ func (a *App) CreateWorkspace(c *gin.Context) {
 //	@Tags			workspace
 //	@Accept			json
 //	@Produce		json
+//	@Param			id	path		string	true	"Workspace ID"
 //	@Success		200	{string}	model.Item
-//	@Router			/workspaces/:id [get]
-func (a *App) GetWorkspace(c *gin.Context) {
+//	@Failure		400	{string}	error
+//	@Router			/workspaces/{id} [get]
+func (a *Controller) GetWorkspace(c *gin.Context) {
 	var workspace Workspace
 	if err := a.DB.Where("id = ?", c.Param("workspace")).First(&workspace).Error; err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
