# pkg/app/types.go
@@ -1,16 +1,8 @@
-package store
+package app
 
 import "gorm.io/gorm"
 
-const (
-	contextKeyUserEmail   = "email"
-	contextKeyUserID      = "user_id"
-	contextKeyWorkspace   = "workspace"
-	contextKeyWorkspaceID = "workspace_id"
-	headerUser            = "x-user"
-	headerWorkspace       = "x-workspace"
-)
-
+// Workspace is a struct for a workspace
 type Workspace struct {
 	gorm.Model
 	Name        string
@@ -18,10 +10,11 @@ type Workspace struct {
 	Users       []*User `gorm:"many2many:user_workspaces;"`
 }
 
+// User is a struct for a user
 type User struct {
 	gorm.Model
 	Name       string       `json:"name"`
-	Email      string       `json:"email" gorm:"uniqueIndex;not null"`
+	Email      string       `json:"email" gorm:"uniqueIndex;not null" validate:"required,email"`
 	Username   string       `json:"username"`
 	Password   string       `json:"password"`
 	Items      []Item       `json:"items" gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
@@ -32,7 +25,7 @@ type Item struct {
 	gorm.Model
 	Name        string `json:"name"`
 	Description string `json:"description"`
-	URL         string `json:"url"`
+	URL         string `json:"url" validate:"url"`
 	UserID      uint   `json:"user_id"`
 	WorkspaceID uint   `json:"workspace_id"`
 }
@@ -40,26 +33,25 @@ type Item struct {
 type createItemInput struct {
 	Name        string `json:"name" binding:"required"`
 	Description string `json:"description"`
-	URL         string `json:"url"`
-	UserEmail   string `json:"user_email"`
+	URL         string `json:"url" validate:"omitempty,url"`
+	UserEmail   string `json:"user_email" validate:"required,email"`
 	Workspace   string `json:"workspace"`
 }
 
 type updateItemInput struct {
 	Name        string `json:"name"`
 	Description string `json:"description"`
-	URL         string `json:"url"`
+	URL         string `json:"url" validate:"omitempty,url"`
 }
 
 type createUserInput struct {
-	Name       string   `json:"name" binding:"required"`
-	Email      string   `json:"email" binding:"required"`
-	Workspaces []string `json:"workspaces"`
+	Name  string `json:"name" binding:"required"`
+	Email string `json:"email" binding:"required" validate:"email"`
 }
 
 type updateUserInput struct {
 	Name       string   `json:"name"`
-	Email      string   `json:"email"`
+	Email      string   `json:"email" validate:"omitempty,email"`
 	Workspaces []string `json:"workspaces"`
 }
 
